- fixed bug in trivial heuristic: the locking solution might have falsely initialized some values to zero

plugins:
- added constraint handler for second order cone constraints (cons_soc.(c|h))
- added packing/partitioning orbitope constraint handler for symmetry handling (cons_orbitope.h/c)

parameters:

SCIP version 1.2.0
===============

interface:
- new parameter "mksetcoefsvalid" in lp.c: SCIPlpCalcMIR(), scip.c: SCIPcalcMIR(), and sepa_cmir.c: tryDelta() to store
  whether "mksetcoefs" computed in SCIPlpCalcMIR() is valid. If the mixed knapsack constraint obtained after aggregating LP rows 
  is empty or contains too many nonzero elements the generation of the c-MIR cut is aborted in SCIPlpCalcMIR() and mksetcoefs is not valid.
- new parameter "set" in SCIPconsSetInitial().
- new methods SCIPchgVarLbLazy() and SCIPchgVarUbLazy() in scip.h; These methods can be used to change the lazy lower or upper bound 
  of a variable; This might has the consequences that the bounds of the corresponding variable is  not in LP. This is the case if the 
  lazy lower or upper bound is greater or less than the local lower or upper bound, respectively 
- new method SCIPvarGetLbLazy() and SCIPvarGetUbLazy() in pub_var.h; These methods return the lazy lower or upper bound, respectively
- new methods SCIPgetNFixedonesSetppc() and SCIPgetNFixedzerosSetppc() in cons_setppc.{h,c}; these methods returns curr[5~ent (local) 
  number of variables fixed to one/zero in the given setppc constraint
- new methods SCIPprintNodeRootPath() in scip.h This method prints all branching decisions on variables from the root to the given node
- new methods SCIPnodeGetParentBranchings(), SCIPnodeGetAncestorBranchings(), SCIPnodeGetAncestorBranchingPath(); These methods return
  the set of variable branchings that were performed in the parent node / all ancestor nodes to create a given node